<resources>
    <string name="app_name">TreeSpotter_Firebase</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="add_tree">Add tree</string>
    <string name="give_permission">You\'ll need to grant location permission to add trees.</string>
    <string name="no_location">My Location not available.</string>
    <string name="grant_location_permission_to_add">Grant location permission to add tree</string>
    <string name="added_tree">Added %1$s</string>
    <string name="confirm_delete_tree">Delete %1$s?</string>
    <string name="delete">Delete?</string>
    <string name="tree_deleted">%1$s has been deleted</string>
    <string name="confirm_tree_name">%1$s</string>
    <string name="description_text_a">Choose a tree from the list below…</string>
    <string name="add_tree_button">Add Tree</string>
    <string name="description_text_b">or choose \"Custom\" to write in a custom tree name!</string>
    <string name="description_text_c">Your New Tree will be named:</string>
    <string name="custom_tree_hint">Name</string>
    <string name="no_tree_selected">(Choose a tree name option)</string>
    <string name="please_choose_a_name">Please choose a name</string>

    <string-array name="common_tree_list">
        <item>Select a Tree Below:</item>
        <item>Custom Tree Name</item>
        <item>----------------</item>
        <item>Birch</item>
        <item>Camphor</item>
        <item>Cedar</item>
        <item>Elm</item>
        <item>Fruit</item>
        <item>Ginkgo</item>
        <item>Oak</item>
        <item>Palm</item>
        <item>Pine</item>
        <item>Redwood</item>
    </string-array>

</resources>