<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTreeActivity">

    <Button
        android:id="@+id/add_tree_button"
        android:layout_width="271dp"
        android:layout_height="54dp"
        android:text="@string/add_tree_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tree_name_preview_textview" />

    <Spinner
        android:id="@+id/tree_name_spinner"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/description_text_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_a" />

    <TextView
        android:id="@+id/description_text_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text_a"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tree_name_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_text_b"
        android:layout_width="331dp"
        android:layout_height="66dp"
        android:text="@string/description_text_b"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/custom_tree_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tree_name_spinner"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/custom_tree_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/custom_tree_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/description_text_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_b"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/description_text_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text_c"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tree_name_preview_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_tree_edit_text" />

    <TextView
        android:id="@+id/tree_name_preview_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_tree_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_tree_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_c"
        tools:text="Tree"/>

</androidx.constraintlayout.widget.ConstraintLayout>